--- a/admin/index.html
+++ b/admin/index.html
@@ -10,6 +10,8 @@
         <title>Login</title>
     </head>
     <body>
-        
+        <!-- wrapper -->
+         <div class="wraper"></div>
+        <!-- wrapper ends  -->
     </body>
 </html>
