--- a/admin/index.html
+++ b/admin/index.html
@@ -11,7 +11,12 @@
     </head>
     <body>
         <!-- wrapper -->
-         <div class="wraper"></div>
+        <div class="wraper">
+            <header></header>
+            <!-- main-contents -->
+            <div class="main-contents"></div>
+            <!-- main-contents ends -->
+        </div>
         <!-- wrapper ends  -->
     </body>
 </html>
