--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/main.css">
         <!-- <link rel="shortcut icon" href="./images/logo.jpg"> -->
         <title>Login</title>
     </head>
@@ -14,7 +14,31 @@
         <div class="wraper">
             <header></header>
             <!-- main-contents -->
-            <div class="main-contents"></div>
+            <div class="main-contents">
+                <!-- login-form -->
+                <section class="login-form">
+                    <!-- login-box -->
+                    <div class="login-box">
+                        <h2>Login</h2>
+                        <form action="#" id="myForm" method="post">
+                            <div class="user-box">
+                                <input type="text" name="Username" id="Username" autocomplete="off">
+                                <label>Username</label>
+                            </div>
+                            <div class="user-box">
+                                <input type="text" name="Password" id="Password" autocomplete="off">
+                                <label>Password</label>
+                            </div>
+                            <div class-"user-box">
+                                <button type="submit" class="wide-button">Login</button>
+                                <div class="sys-msg"></div>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- login-box ends -->
+                </section>
+                <!-- login-form ends -->
+            </div>
             <!-- main-contents ends -->
         </div>
         <!-- wrapper ends  -->
