--- a/admin/home.html
+++ b/admin/home.html
@@ -15,7 +15,26 @@
             <header></header>
             <!-- main-contents -->
             <div class="main-contents">
-                <section class="home-menu"></section>
+                <section class="page-title">
+                    <h2>Modules</h2>
+                </section>
+                <section class="modules">
+                    Select a module
+                    <!-- module-buttons -->
+                    <div class="module-buttons">
+                        <div>
+                            <a href="Companies.html">
+                                <button type="button" class="square-button">Companies</button>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="Users.html">
+                                <button type="button" class="square-button">Users</button>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- module-buttons ends -->
+                </section>
             </div>
             <!-- main-contents ends -->
         </div>
@@ -25,6 +44,7 @@
     <script src="./js/scripts.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
+            checkSession();
             getHeader("Home");
         });
     </script>
