--- a/admin/Users.html
+++ b/admin/Users.html
@@ -24,6 +24,8 @@
     <script src="./js/scripts.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
+            checkSession ();
+            getHeader ('Users');
         });
     </script>
 </html>
