--- a/admin/create_Companies.html
+++ b/admin/create_Companies.html
@@ -26,7 +26,7 @@
             <!-- main-contents -->
             <div class="main-contents">
                  <!-- form -->
-                <sectino class="form">
+                <section class="form">
                     <form id="myForm" action="#" method="post">
                         <!-- data-form -->
                         <div class="form-table">
