--- a/admin/create_Companies.html
+++ b/admin/create_Companies.html
@@ -28,7 +28,7 @@
                  <!-- form -->
                 <section class="form">
                     <form id="myForm" action="#" method="post">
-                        <!-- data-form -->
+                        <!-- form-table -->
                         <div class="form-table">
                             <table>
                                 <thead></thead>
@@ -78,7 +78,7 @@
                                 <button type="submit" style="width: 240px;" class="wide-button">Submit</button>
                             </div>
                         </div>
-                        <!-- data-form ends -->
+                        <!-- form-table ends -->
                     </form>
                     <div class="sys-msg"></div>
                 </section>
