--- a/admin/change_my_password.html
+++ b/admin/change_my_password.html
@@ -60,5 +60,9 @@
             checkSession ();
             getHeader ("Change my Password");
         });
+        $("#myForm").on("submit", function() {
+            event.preventDefault();
+            alert('hi');
+        });
     </script>
 </html>
