--- a/admin/change_my_password.html
+++ b/admin/change_my_password.html
@@ -36,7 +36,7 @@
                                     </tr>
                                     <tr>
                                         <td>Confirm Password: </td>
-                                        <td><input type="password" name="cfmPswd" id="cfmPswd"></td>
+                                        <td><input type="password" name="cfmPswd" id="cfmPswd" onblur="checkPasswordsMatch();"></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -60,9 +60,66 @@
             checkSession ();
             getHeader ("Change my Password");
         });
+        
+        function checkPasswordsMatch () {
+                const newPswd = $("#newPswd");
+                const cfmPswd = $("#cfmPswd");
+
+            if (newPswd.val() != cfmPswd.val()) {
+                newPswd.addClass("input-error");
+                cfmPswd.addClass("input-error");
+                $(".sys-msg").addClass("error");
+                $(".sys-msg").html("Passwords do not match!");
+                $(".wide-button").attr('disabled', 'disabled');
+                $(".wide-button").addClass('error');
+            }
+            else {
+                $(".wide-button").removeClass('error');
+                $(".wide-button").removeAttr('disabled', 'disabled');
+            }
+        }
+
         $("#myForm").on("submit", function() {
             event.preventDefault();
-            alert('hi');
+            let error = false;
+            let currentPswd = $("#currentPswd");
+            let newPswd = $("#newPswd");
+            let cfmPswd = $("#cfmPswd");
+
+            if (currentPswd.val().trim() == "" || currentPswd.val().trim() == null) {
+                error = true;
+                currentPswd.addClass("input-error");
+                displayError("Please fill out all the fields in red!");
+            }
+
+            if (newPswd.val().trim() == "" || newPswd.val().trim() == null) {
+                error = true;
+                newPswd.addClass("input-error");
+                displayError("Please fill out all the fields in red!");
+            }
+
+            if (cfmPswd.val().trim() == "" || cfmPswd.val().trim() == null) {
+                error = true;
+                cfmPswd.addClass("input-error");
+                displayError("Please fill out all the fields in red!");
+            }
+
+            if (error == false) {
+                $.ajax({
+                    url: "./php/change_my_password.php",
+                    type: "post",
+                    data: $(this).serialize(),
+                    success: function (err) {
+                        if (err == 0) {
+                            let msg = "Your password has been changed successfully!";
+                            $(".sys-msg").html(msg);
+                        }
+                        else {
+                            displayError(err);
+                        }
+                    }
+                });
+            } 
         });
     </script>
 </html>
