--- a/admin/view_Companies.html
+++ b/admin/view_Companies.html
@@ -24,6 +24,9 @@
                 <section class="data-table users-table">
                     <h3>Users</h3>
                 </section>
+                <section class="data-table deposits-table">
+                    <h3>Deposits</h3>
+                </section>
             </div>
             <!-- main-contents ends -->
         </div>
@@ -53,9 +56,14 @@
                 $("#current-tab").html("<div>"+data+"</div>");
             });
 
-            //gettgin data from the table Users
+            //getting data from the table Users
             $.post("./php/select_Company_Users.php", {CompaniesLink: CompaniesLink}, function (data) {
                 $(".users-table").append(data);
+            });
+
+            //getting data from the table Deposits
+            $.post("./php/select_Company_Deposits.php", {CompaniesLink: CompaniesLink}, function (data) {
+                $(".deposits-table").append(data);
             });
         });
     </script>
